--- a/index.html
+++ b/index.html
@@ -20,6 +20,131 @@
             </div>
         </nav>
         <main>
+            <h1>Space RIpples Reveal Big Bang's Smoking Gun</h1>
+            <figure>
+            <img src="" alt="Alan Guth">
+            <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times</span>
+            </figcaption>
+            <p>By Dennis Overbye</p>
+            <div>
+                <p>March 17, 2014</p>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-envelope"></i>
+                <i class="fas fa-share"></i>
+                <i class="far fa-bookmark"></i>
+                <i class="far fa-comment-alt"></i>
+            </div>
+            <article>
+                <p>
+                    CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
+                </p>
+                <p>
+                    He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
+                </p>
+                <p>
+                    If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
+                </p>
+                <p>
+                    “SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
+                </p>
+                <p>
+                    On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.
+                </p>
+                <p>
+                    Reaching back across 13.8 billion years to the first sliver of cosmic time with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.
+                </p>
+                <div>
+                    Unlock more free articles.
+                    <a href="#">Create an account or log in</a>
+                </div>
+                <p>
+                    Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.
+                </p>
+                <p>
+                    If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.
+                </p>
+                <p>
+                    Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.
+                </p>
+                <p>
+                    ‘As Big as It Gets’
+                </p>
+                <p>
+                    In our own universe, it would serve as a window into the forces operating at energies forever beyond the reach of particle accelerators on Earth and yield new insights into gravity itself. Dr. Kovac’s ripples would be the first direct observation of gravitational waves, which, according to Einstein’s theory of general relativity, should ruffle space-time.
+                </p>
+                <div>                   
+                <figure>
+                    The Theory of Inflation
+                    <figcaption>
+                    Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
+                    </figcaption>
+                    <img src="" alt="">
+                </figure>
+                <p>
+                    <b>THE UNIVERSE</b>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.
+                </p>
+                <p>
+                    <b>NOT ENOUGH TIME</b>  The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.
+                </p>
+                <p>
+                    <b>DISTANT COFFEE</b>  At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled. 
+                </p>
+                <p>
+                    <b>COFFEE EVERYWHERE</b>  Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.
+                </p>
+                <p>
+                    <b>STILL NOT ENOUGH TIME</b>  There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might explain their even temperature.
+                </p>
+                <p>
+                    <b>INFLATION</b>  solves this problem. The theory proposes that, less than a trillionth of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny ripples in the violently expanding energy field eventually grew into the large-scale structures of the universe.
+                </p>
+                <p>
+                    <b>FLUCTUATION</b>  Astronomers have now detected evidence of these ancient fluctuations in swirls of polarized light in the cosmic background radiation, which is energy left over from the early universe. These are gravitational waves predicted by Einstein.
+                </p>
+                <p>
+                    <b>EXPANSION</b>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.
+                </p>
+                <figcaption>By LARRY BUCHANAN and JONATHAN CORUM</figcaption>
+                </div>
+                <p>
+                    Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
+                </p>
+                <p>
+                    Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.
+                </p>
+                <p>
+                    “With nature, you have to be lucky,” he said. “Apparently we have been lucky.”
+                </p>
+                <p>
+                    The results are the closely guarded distillation of three years’ worth of observations and analysis. Eschewing email for fear of a leak, Dr. Kovac personally delivered drafts of his work to a select few, meeting with Dr. Guth, who is now a professor at Massachusetts Institute of Technology (as is his son, Larry, who was sleeping that night in 1979), in his office last week.
+                </p>
+                <p>
+                    “It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.
+                </p>
+                <p>
+                    Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.
+                </p>
+                <video src=""></video>
+                <p>
+                    Stanford Professor Andrei Linde celebrates physics breakthrough  
+                <span>Video by StanfordUniversity</span>
+                </p> 
+                <p>
+                    Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
+                </p>
+                <p>
+                    “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
+                </p>
+                <p>
+                    Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.
+                </p>
+
+
+
+
+
+            </article>
 
             <aside>
 
