--- a/index.html
+++ b/index.html
@@ -139,16 +139,130 @@
                 <p>
                     Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.
                 </p>
+                <p>
+                    By last weekend, as social media was buzzing with rumors that inflation had been seen and news spread, astrophysicists responded with a mixture of jubilation and caution.
+                </p>
+                <p>
+                    Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this stays true, it will go down as one of the greatest discoveries in the history of science.”
+                </p>
+                <p>
+                    John E. Carlstrom of the University of Chicago, Dr. Kovac’s mentor and head of a competing project called the South Pole Telescope, pronounced himself deeply impressed. “I think the results are beautiful and very convincing,” he said.
+                </p>
+                <p>Spirals in the Sky</p>
+                <p>
+                    Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.
+                </p>
+                <p>
+                    Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.
+                </p>
+                <p>
+                    “The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
+                </p>
+                <figure>
+                    <img src="" alt="">
+                    <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press</figcaption>
+                </figure>
+                <p>In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.
+                </p>
+                <p>
+                    A Special Time
+                </p>
+                <p>
+                    The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.
+                </p>
+                <p>
+                    Almost as quickly, this pulse would subside, relaxing into ordinary particles and radiation. All of normal cosmic history was still ahead, resulting in today’s observable universe, a patch of sky and stars billions of light-years across. “It’s often said that there is no such thing as a free lunch,” Dr. Guth likes to say, “but the universe might be the ultimate free lunch.”
+                </p>
+                <p>
+                    “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
+                </p>
+                <p>
+                    A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. Order Reprints | Today’s Paper | Subscribe
+                </p>
 
-
-
-
-
+                <div>
+                    <button>
+                        READ 615 COMMENTS
+                    </button>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fas fa-envelope"></i>
+                    <i class="fas fa-share"></i>
+                </div>
             </article>
 
             <aside>
 
             </aside>
+            <section>
+                <p>Suggested newsletters for you
+                </p>
+                <p>Don't show me this again</p>
+                <div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+                <button>Sign Up</button>
+            </section>
+
+            <section>
+                <div>
+                    <figure>
+                        <img src="https://static01.nyt.com/images/2020/10/23/science/23SCI-ASTEROID-image/23SCI-ASTEROID-image-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+        
+            </section>
 
         </main>
         <footer>
