Added more content to the article page, like footer and recommended articles

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             </section>
 
             <section>
+                <p>More in Space and Astronomy</p>
                 <div>
                     <figure>
                         <img src="https://static01.nyt.com/images/2020/10/23/science/23SCI-ASTEROID-image/23SCI-ASTEROID-image-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
@@ -261,12 +262,161 @@
                     <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
                     <p>Oct. 23</p>
                 </div>
-        
             </section>
 
-        </main>
-        <footer>
+            <section>
+                <p>Editors’ Picks</p>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>NASA</figcaption>
+                    </figure>
+                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
+                    <p>Oct. 23</p>
+                </div>
+            </section>
 
+            <section>
+                <p>Most Popular</p>
+                <ul>
+                    <li>Tony La Russa Hired as White Sox Manager</li>
+                    <li>Billy Joe Shaver, Outlaw Singer and Songwriter, Dies at 81</li>
+                    <li>Kavanaugh Fixes Error in Election Opinion After Vermont Complaint</li>
+                    <li>‘Quick, Quick, Quick’: Trump Rushes Martha McSally at Rally</li>
+                    <li>Opinion: China’s Chance to Save Antarctic Sea Life</li>
+                    <li>Justice Dept. Is Said to Quietly Quash Inquiry Into Tamir Rice Killing</li>
+                    <li>An Apartment in Brooklyn or a House Upstate? She Had the Budget for One</li>
+                    <li>Rooster Kills Police Officer in Covid-19 Lockdown Raid</li>
+                    <li>Can I Tell My Friend Her Halloween Costume Is Problematic?</li>
+                    <li>Smile, Dad: In a Photo Session With Matthew McConaughey, His Kids Did the Shooting</li>
+                </ul>
+            </section>
+            <section>
+                <h2>The New York Times</h2>
+                <div>
+                    <ul>
+                        <li>NEWS</li>
+                        <li>Home Page</li>
+                        <li>World</li>
+                        <li>U.S.</li>
+                        <li>Politics</li>
+                        <li>Election 2020</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>OPINION</li>
+                        <li>Home Page</li>
+                        <li>World</li>
+                        <li>U.S.</li>
+                        <li>Politics</li>
+                        <li>Election 2020</li>
+                        <li>New York</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>ARTS</li>
+                        <li>Home Page</li>
+                        <li>World</li>
+                        <li>U.S.</li>
+                        <li>Politics</li>
+                        <li>Election 2020</li>
+                        <li>New York</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>LIVING</li>
+                        <li>Home Page</li>
+                        <li>World</li>
+                        <li>U.S.</li>
+                        <li>Politics</li>
+                        <li>Election 2020</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                        <li>New York</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>MORE</li>
+                        <li>Home Page</li>
+                        <li>World</li>
+                        <li>U.S.</li>
+                        <li>Politics</li>
+                        <li>Election 2020</li>
+                        <li>New York</li>
+                    </ul>
+                </div>
+                <div>
+                   <ul>
+                       <li>SUBSCRIBE</li>
+                       <li>Home Delivery</li>
+                       <li>Digital Subscriptions</li>
+                       <li>Games</li>
+                       <li>Cooking</li>
+                   </ul>
+                   <ul>
+                       <li>Email Newsletters</li>
+                       <li>Corporate Subscriptions</li>
+                       <li>Education Rate</li>
+                       <li>Mobile Applications</li>
+                       <li>Replica Edition</li>
+                       <li>International</li>
+                       <li>Canada</li>
+                       <li>Español</li>
+                       <li>中文网</li>
+                   </ul>
+                </div>
+            </section>
+        </main>
+        <hr>
+        <footer>
+            <ul>
+                <li>© 2020 The New York Times Company</li>
+                <li>NYTCo</li>
+                <li>Contact Us</li>
+                <li>Work with us</li>
+                <li>Advertise</li>
+                <li>T Brand Studio</li>
+                <li>Your Ad Choices</li>
+                <li>Privacy Policy</li>
+                <li>Terms of Service</li>
+                <li> Terms of Sale</li>
+                <li>Site Map</li>
+                <li>Help</li>
+                <li>Subscriptions</li>
+            </ul>
         </footer>
     </body>
 </html>
