styled the nav bar

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
         <meta charset="UTF-8">
         <title>Space Ripples Reveal Big Bang's Smoking Gun</title>
         <link rel="stylesheet" href="./assets/styles.css">
+        <script src="https://use.fontawesome.com/e18ff5de8c.js"></script>
     </head>
 
     <body>
         <nav>
-            <div>
+            <div class="top-left">
                 <i class="fa fa-bars" aria-hidden="true"></i>
                 <i class="fa fa-search" aria-hidden="true"></i>
                 <a href="">SPACE & COSMOS</a>
             </div>
-            <h2>The New York Times</h2>
-            <div>
+            <img src="./assets/nyt-logo.png" alt="">
+            <div class="top-right-btns">
                 <button>SUBSCRIBE NOW</button>
                 <button>LOG IN</button>
             </div>
