Added some changes to the main article

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Space Ripples Reveal Big Bang's Smoking Gun</title>
         <link rel="stylesheet" href="./assets/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet"> 
         <script src="https://use.fontawesome.com/e18ff5de8c.js"></script>
     </head>
 
@@ -14,16 +15,16 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
                 <a href="">SPACE & COSMOS</a>
             </div>
-            <img src="./assets/nyt-logo.png" alt="">
+            <img src="./assets/imgs/nyt-logo.png" alt="New York Times">
             <div class="top-right-btns">
                 <button>SUBSCRIBE NOW</button>
                 <button>LOG IN</button>
             </div>
         </nav>
         <main>
-            <h1>Space RIpples Reveal Big Bang's Smoking Gun</h1>
+            <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
             <figure>
-            <img src="" alt="Alan Guth">
+            <img src="./assets/imgs/article-img.jpg" alt="Alan Guth">
             <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times</span>
             </figcaption>
             <p>By Dennis Overbye</p>
