created grid that contains article and aside

--- a/index.html
+++ b/index.html
@@ -22,22 +22,31 @@
             </div>
         </nav>
         <main>
-            <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
-            <figure>
-            <img src="./assets/imgs/article-img.jpg" alt="Alan Guth">
-            <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times</span>
-            </figcaption>
-            <p>By Dennis Overbye</p>
-            <div>
-                <p>March 17, 2014</p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fas fa-envelope"></i>
-                <i class="fas fa-share"></i>
-                <i class="far fa-bookmark"></i>
-                <i class="far fa-comment-alt"></i>
-            </div>
+            <section>
+                <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
+                <figure>
+                <img src="./assets/imgs/article-img.jpg" alt="Alan Guth">
+                <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times
+                </figcaption>
+                </figure>
+            </section>
+
+            <section class="main-article">
+                
             <article>
+                <div>
+                    <p>By Dennis Overbye</p>
+                    <div>
+                        <p>March 17, 2014</p>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-share"></i>
+                        <i class="far fa-bookmark"></i>
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+
+                </div> 
                 <p>
                     CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
                 </p>
@@ -193,9 +202,11 @@
                 </div>
             </article>
 
-            <aside>
+                <aside>
 
-            </aside>
+                </aside>
+            </section>
+
             <section>
                 <p>Suggested newsletters for you
                 </p>
