Added some changes to the main article style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./assets/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet"> 
         <script src="https://use.fontawesome.com/e18ff5de8c.js"></script>
+        <script src="https://kit.fontawesome.com/0348c0adc9.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -32,21 +33,22 @@
             </section>
 
             <section class="main-article">
-                
-            <article>
+            <section class="article-column">    
                 <div>
-                    <p>By Dennis Overbye</p>
-                    <div>
+                    <p class="writer">By <a href="#">Dennis Overbye</a></p>
+                    <div class="article-icons">
                         <p>March 17, 2014</p>
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fas fa-envelope"></i>
-                        <i class="fas fa-share"></i>
-                        <i class="far fa-bookmark"></i>
-                        <i class="far fa-comment-alt"></i>
+                        <div class="icons">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fas fa-envelope"></i>
+                            <i class="fas fa-share"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-comment-alt"></i>
+                        </div>
                     </div>
-
                 </div> 
+            <article>
                 <p>
                     CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
                 </p>
@@ -201,6 +203,7 @@
                     <i class="fas fa-share"></i>
                 </div>
             </article>
+            </section>
 
                 <aside>
 
