inflation background image and text overlay

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                 <p>
                     In our own universe, it would serve as a window into the forces operating at energies forever beyond the reach of particle accelerators on Earth and yield new insights into gravity itself. Dr. Kovac’s ripples would be the first direct observation of gravitational waves, which, according to Einstein’s theory of general relativity, should ruffle space-time.
                 </p>
+            </article>
             </section>
+
+
             <section class="aside-column">
                 <aside>
                     <div>
@@ -107,15 +110,16 @@
             </section>
             
             </section>
-
-            <section>
-                <div class="inflation">                
-                <figure>
+<!-- INFLATION IMAGE SECTION -->
+            <section class="inflation">
+                                
+                <h3>
                     The Theory of Inflation
-                    <figcaption>
+                </h3>
+                <p>
                     Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
-                    </figcaption>
-                </figure>
+                </p>
+                <div class="inflation-grid">
                     <div class="text text1">
                         <b>THE UNIVERSE</b>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.
                     </div>
