--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>Space Ripples Reveal Big Bang's Smoking Gun</title>
         <link rel="stylesheet" href="./assets/styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
         <script src="https://use.fontawesome.com/e18ff5de8c.js"></script>
         <script src="https://kit.fontawesome.com/0348c0adc9.js" crossorigin="anonymous"></script>
     </head>
@@ -147,8 +148,9 @@
                 <figcaption>By LARRY BUCHANAN and JONATHAN CORUM</figcaption>
                 </div>
             </section>
+            <!--MAIN ARTICLE-2 -->
             <section class="main-article">
-            <section class="article-column">    
+                <article class="article-column"> 
                 <p>
                     Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
                 </p>
@@ -218,22 +220,22 @@
                 <p>
                     “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
                 </p>
-                <p>
+                <p class="other-version">
                     A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. Order Reprints | Today’s Paper | Subscribe
                 </p>
 
-                <div>
-                    <button>
+                <div class="comments-social">
+                    <button class="top-right-btns">
                         READ 615 COMMENTS
                     </button>
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fas fa-envelope"></i>
-                    <i class="fas fa-share"></i>
+                    <div>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-share"></i>
+                    </div>
                 </div>
             </article>
-            </section>
-                
             </section>
 
             <section>
