Added the suggested articles on the bottom

--- a/index.html
+++ b/index.html
@@ -238,30 +238,45 @@
             </article>
             </section>
 
-            <section>
-                <p>Suggested newsletters for you
+           <section class="bottom-articles">
+
+            <section class="suggestions">
+                <p>
+                    Suggested newsletters for you
                 </p>
-                <p>Don't show me this again</p>
-                <div>
-                    <div>
-
+                <span>
+                    Don't show me this again
+                </span>
+                    <div class="suggestion1">
+                        <img src="./assets/imgs/suggested1.png" alt="suggestion1">
+                        <p class="suggestion-schedule">
+                            FOUR TIMES A WEEK
+                        </p>
+                        <p class="suggestion-title">
+                            Cooking
+                        </p>
+                        <p class="suggestion-text">
+                            Daily inspiration, delicious recipes and other updates from Sam Sifton and NYT Cooking.
+                        </p>
+                        <p class="suggestion-latest">
+                            See the latest
+                        </p>
                     </div>
-                    <div>
-
+                    <div class="suggestion2">
+                        <img src="./assets/imgs/suggested2.png" alt="suggestion2">
                     </div>
-                    <div>
-
+                    <div class="suggestion3">
+                        <img src="./assets/imgs/suggested3.png" alt="suggestion3">
                     </div>
-                </div>
                 <button>Sign Up</button>
             </section>
 
-            <section>
+            <section class="space">
                 <p>More in Space and Astronomy</p>
                 <div>
-                    <figure>
+                    <!-- <figure>
                         <img src="https://static01.nyt.com/images/2020/10/23/science/23SCI-ASTEROID-image/23SCI-ASTEROID-image-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
-                        <figcaption>NASA</figcaption>
+                        <figcaption>NASA</figcaption> -->
                     </figure>
                     <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
                     <p>Oct. 23</p>
@@ -308,7 +323,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="picks">
                 <p>Editors’ Picks</p>
                 <div>
                     <figure>
@@ -336,7 +351,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="popular">
                 <p>Most Popular</p>
                 <ul>
                     <li>Tony La Russa Hired as White Sox Manager</li>
@@ -351,6 +366,9 @@
                     <li>Smile, Dad: In a Photo Session With Matthew McConaughey, His Kids Did the Shooting</li>
                 </ul>
             </section>
+
+            </section>
+
             <section>
                 <h2>The New York Times</h2>
                 <div>
