Added some style changes to the editor's pick

--- a/index.html
+++ b/index.html
@@ -343,29 +343,20 @@
 
             <section class="picks">
                 <p>Editors’ Picks</p>
-                <div>
-                    <figure>
-                        <img src="" alt="">
-                        <figcaption>NASA</figcaption>
-                    </figure>
-                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
-                    <p>Oct. 23</p>
+                <div class="picks1">
+                        <img src="./assets/imgs/picks1.jpg" alt="picks1">
+                    <p>Remarkable Records of Joni Mitchell’s Changes</p>
+                    <span class="picks-dates">Oct. 23</span>
                 </div>
-                <div>
-                    <figure>
-                        <img src="" alt="">
-                        <figcaption>NASA</figcaption>
-                    </figure>
-                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
-                    <p>Oct. 23</p>
+                <div class="picks2">
+                    <img src="./assets/imgs/picks2.jpg" alt="picks2">
+                <p>Remarkable Records of Joni Mitchell’s Changes</p>
+                <span class="picks-dates">Oct. 23</span>
                 </div>
-                <div>
-                    <figure>
-                        <img src="" alt="">
-                        <figcaption>NASA</figcaption>
-                    </figure>
-                    <p>NASA Mission Springs a Small Leak After Touching an Asteroid</p>
-                    <p>Oct. 23</p>
+                <div class="picks3">
+                    <img src="./assets/imgs/picks3.jpg" alt="picks3">
+                <p>Remarkable Records of Joni Mitchell’s Changes</p>
+                <span class="picks-dates">Oct. 23</span>
                 </div>
             </section>
 
