layout and styled the bottom links

--- a/index.html
+++ b/index.html
@@ -378,8 +378,12 @@
 
             </section>
 
-            <section>
-                <h2>The New York Times</h2>
+            <div class="links-title">
+                <img src="./assets/imgs/nyt-logo.png" alt="">
+                <span>Go to Home Page</span>
+            </div>
+            <br>     
+            <section class="nyt-links">  
                 <div>
                     <ul>
                         <li>NEWS</li>
@@ -449,8 +453,8 @@
                         <li>New York</li>
                     </ul>
                 </div>
-                <div>
-                   <ul>
+                <div class="subscribe-links">
+                   <ul class="subscribe-subscribe">
                        <li>SUBSCRIBE</li>
                        <li>Home Delivery</li>
                        <li>Digital Subscriptions</li>
