Added some style changes to the footer, as well as some minor style fixes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                     <div class="text text8">
                         <b>EXPANSION</b>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.
                     </div>
-                <figcaption>By LARRY BUCHANAN and JONATHAN CORUM</figcaption>
+                </div>
+                <div class="inflation-span">
+                <span>By LARRY BUCHANAN and JONATHAN CORUM</span>
                 </div>
             </section>
             <!--MAIN ARTICLE-2 -->
@@ -169,12 +171,13 @@
                 <p>
                     Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.
                 </p>
-                <video src=""></video>
-                <p>
-                    Stanford Professor Andrei Linde celebrates physics breakthrough  
-                <span>Video by StanfordUniversity</span>
-                </p> 
-                <p>
+                <br>    
+                <iframe width="600" height="358" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <span class="video-span">Stanford Professor Andrei Linde celebrates physics breakthrough Video by StanfordUniversity</span>
+                <br>
+                <br>
+            
+                <p> 
                     Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
                 </p>
                 <p>
@@ -202,10 +205,9 @@
                 <p>
                     “The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
                 </p>
-                <figure>
-                    <img src="" alt="">
-                    <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press</figcaption>
-                </figure>
+                    <img src="./assets/imgs/article-img2.jpg" alt="">
+                    <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth. Steffen Richter/Associated Press</figcaption>
+                    <br>
                 <p>In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.
                 </p>
                 <p>
@@ -456,26 +458,28 @@
                 <div class="subscribe-links">
                    <ul class="subscribe-subscribe">
                        <li>SUBSCRIBE</li>
-                       <li>Home Delivery</li>
-                       <li>Digital Subscriptions</li>
-                       <li>Games</li>
-                       <li>Cooking</li>
+                       <li><i class="fas fa-newspaper"></i>Home Delivery</li>
+                       <li><i class="fab fa-paypal"></i>Digital Subscriptions</li>
+                       <li><i class="fas fa-gamepad"></i>Games</li>
+                       <li><i class="fas fa-utensils"></i>Cooking</li>
                    </ul>
+                   <div class="small-links">
                    <ul>
                        <li>Email Newsletters</li>
                        <li>Corporate Subscriptions</li>
-                       <li>Education Rate</li>
+                       <li class="small-links-separator">Education Rate</li>
+                       <br>
                        <li>Mobile Applications</li>
                        <li>Replica Edition</li>
                        <li>International</li>
                        <li>Canada</li>
                        <li>Español</li>
                        <li>中文网</li>
+                    </div>
                    </ul>
                 </div>
             </section>
         </main>
-        <hr>
         <footer>
             <ul>
                 <li>© 2020 The New York Times Company</li>
