make nyt logo a link and fix the articles alignment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
                 <a href="">SPACE & COSMOS</a>
             </div>
-            <img src="./assets/imgs/nyt-logo.png" alt="New York Times">
+            <a href="#">
+                <img src="./assets/imgs/nyt-logo.png" alt="New York Times"></a>
             <div class="top-right-btns">
                 <button>SUBSCRIBE NOW</button>
                 <button>LOG IN</button>
@@ -385,7 +386,8 @@
             </section>
 
             <div class="links-title">
-                <img src="./assets/imgs/nyt-logo.png" alt="">
+                <a href="#"><img src="./assets/imgs/nyt-logo.png" alt=""></a>
+                
                 <span>Go to Home Page</span>
             </div>
             <br>     
