Added some changes to the images and figures in the index file

--- a/index.html
+++ b/index.html
@@ -206,11 +206,10 @@
                 <p>
                     “The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
                 </p>
-                <figure>
+                <div class="telescope">
                     <img src="./assets/imgs/article-img2.jpg" alt="Bicep2 telescope">
-                    <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth. Steffen Richter/Associated Press</figcaption>
-                </figure>
-                    
+                    <span>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth. Steffen Richter/Associated Press</span>
+                </div>
                     <br>
                 <p>In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.
                 </p>
