--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <section>
                 <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
-                <figure>
+                <figure class="article-img">
                 <img src="./assets/imgs/article-img.jpg" alt="Alan Guth">
                 <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times
                 </figcaption>
@@ -152,8 +152,8 @@
                 </div>
             </section>
             <!--MAIN ARTICLE-2 -->
-            <section class="main-article">
-                <article class="article-column"> 
+            <section>
+                <article class="article-column2"> 
                 <p>
                     Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
                 </p>
