--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <body>
         <nav>
             <div class="top-left">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <a href="">SPACE & COSMOS</a>
+                <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="#">SPACE & COSMOS</a>
             </div>
             <a href="#">
                 <img src="./assets/imgs/nyt-logo.png" alt="New York Times"></a>
             <div class="top-right-btns">
-                <button>SUBSCRIBE NOW</button>
-                <button>LOG IN</button>
+                <button type="button">SUBSCRIBE NOW</button>
+                <button type="button">LOG IN</button>
             </div>
         </nav>
         <main>
@@ -230,7 +230,7 @@
                 </p>
 
                 <div class="comments-social">
-                    <button class="top-right-btns">
+                    <button class="top-right-btns" type="button">
                         READ 615 COMMENTS
                     </button>
                     <div>
@@ -607,6 +607,15 @@
                        <li>中文网</li>
                    </ul>
                 </div>
+                </div>
+            </section>
+            <section class="bottom-navbar">
+                <h5>Access more of The Times by creating a free account or logging in. </h5>
+                <div class="bottom-right">
+                    <span>EXPAND</span>
+                    <a href="#">
+                    <i class="fas fa-chevron-up"></i>
+                    </a>
                 </div>
             </section>
         </main>
